--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
-  "editor.fontSize": 16,
+  "editor.fontSize": 18,
   "editor.fontFamily": "Tahoma, monospace",
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "gitlens.codeLens.authors.enabled": false,
+  "gitlens.codeLens.recentChange.enabled": false
 }
